# can_virtual_staining_for_high_thorughout_screening_generalize

./: .cruft.json  README.md  pyproject.toml
can_virtual_staining_for_high_thorughout_screening_generalize/: pyproject.toml
can_virtual_staining_for_high_thorughout_screening_generalize/scripts/: train.py
can_virtual_staining_for_high_thorughout_screening_generalize/src/can_virtual_staining_for_high_thorughout_screening_generalize/data/: aligned_dataset.py
scripts/: encode_features.py  test.py  train.py
src/can_virtual_staining_for_high_thorughout_screening_generalize/data/: custom_dataset_data_loader.py
src/can_virtual_staining_for_high_thorughout_screening_generalize/util/: visualizer.py
