[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project]
name = "can_virtual_staining_for_high_thorughout_screening_generalize?"
description = "Pix2PixHD GAN adapted for all virtual staining experiments on high-throughput screening datatset."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
]
keywords = []
license = { text = "BSD 3-Clause License" }
authors = [
    { email = "smtonks2712@gmail.com ", name = "Samuel Tonks " },
]
dynamic = ["version"]
dependencies = [
    dominate,
    torch,
    torchvision,
    visdom,
    tifffile,
    opencv,
    
]